# ComInfo

./: .gitignore  Cargo.toml  ComiInstallerScript.iss  README.md  build.py  settings.json
InstallerScripts/: ComiInstallerScript.iss
src/: build.rs  comi_run.rs  main.rs  settings.rs
