# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "comi"
version = "0.1.7"
edition = "2021"

default-run = "comi"

[[bin]]
name = "comi"
path = "src/main.rs"

[[bin]]
name = "ComiRun"
path = "src/comi_run.rs"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
console = "0.15.8"
directories = "5.0.1"
path-slash = "0.2.1"
rusb = "0.9.3"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
serialport = "4.3.0"